# payment-events-hub

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: README  env.py
alembic/versions/: 0001_init.py
doc/: api.md
peh/: app.py  config.py  db.py  deps.py  domain.py  models.py  schemas.py
peh/routers/: events.py  reconciliation.py  transactions.py
peh/scripts/: load_sample_events.py  verify_db.py  wait_for_db.py
peh/services/: ingestion.py
postman/: payment-events-hub.postman_collection.json
src/: app.py  config.py  db.py  deps.py  schemas.py
src/routers/: events.py  reconciliation.py  transactions.py
src/scripts/: __init__.py  load_sample_events.py  recompute_flags.py  verify_db.py  wait_for_db.py
src/services/: ingestion.py
tests/: conftest.py  test_all_api_routes_smoke.py  test_edge_cases.py  test_flow.py  test_full_dataset_optin.py
