[project]
name = "payment-events-hub"
version = "0.1.0"
description = "Ingest payment lifecycle events, maintain transaction state, and expose reconciliation APIs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  # Used for local/tests sqlite URLs: sqlite+pysqlite://...
  "greenlet>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["peh*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
